<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Análisis Quiniela</string>
    <string name="banner_ad_unit_id">ca-app-pub-4839498172336828/4812015597</string>
    <string name="inter_ad_unit_id">ca-app-pub-4839498172336828/8977322397</string>
    <string name="hello_world">Resultados</string>
    <string name="action_settings">Opciones</string>
    <string name="valorPorDefecto">0</string>
    <string name="visitante">Equipo Visitante</string>
    <string name="anfitrion">Equipo Anfitrión</string>
    <string name="ptos">Puntos Clasificación</string>
    <string name="PJ">Partidos Jugados</string>
    <string name="PG">Partidos Ganados</string>
    <string name="PE">Partidos Empatados</string>
    <string name="PP">Partidos Perdidos</string>
    <string name="GF">Goles a Favor</string>
    <string name="GC">Goles en Contra</string>
    <string name="DG">Diferencia de Goles</string>
    <string name="title_activity_pantalla_analisis1">PantallaAnalisis1</string>
    <string name="title_activity_pantalla_analisis2">PantallaAnalisis2</string>
    <string name="title_activity_pantalla_analisis3">PantallaAnalisis3</string>
    <string name="title_activity_pantalla_analisis4">PantallaAnalisis4</string>
    <string name="title_activity_pantalla_analisis5">PantallaAnalisis5</string>
    <string name="title_activity_pantalla_analisis6">PantallaAnalisis6</string>
    <string name="title_activity_pantalla_analisis7">PantallaAnalisis7</string>
    <string name="title_activity_pantalla_analisis8">PantallaAnalisis8</string>
    <string name="title_activity_pantalla_analisis9">PantallaAnalisis9</string>
    <string name="title_activity_pantalla_analisis10">PantallaAnalisis10</string>
    <string name="title_activity_pantalla_analisis11">PantallaAnalisis11</string>
    <string name="title_activity_pantalla_analisis12">PantallaAnalisis12</string>
    <string name="title_activity_pantalla_analisis13">PantallaAnalisis13</string>
    <string name="title_activity_pantalla_analisis14">PantallaAnalisis14</string>
    <string name="title_activity_pantalla_analsis15">PantallaAnalsis15</string>
    <string name="title_activity_pantalla_resultados">PantallaResultados</string>
    <string name="title_activity_pantalla_analisis_partido">PantallaAnalisisPartido</string>
    <string name="title_activity_pantalla_resultado_partido">PantallaResultadoPartido</string>
    <string name="p1">Partido 1</string>
    <string name="p2">Partido 2</string>
    <string name="p3">Partido 3</string>
    <string name="p4">Partido 4</string>
    <string name="p5">Partido 5</string>
    <string name="p6">Partido 6</string>
    <string name="p7">Partido 7</string>
    <string name="p8">Partido 8</string>
    <string name="p9">Partido 9</string>
    <string name="p10">Partido 10</string>
    <string name="p11">Partido 11</string>
    <string name="p12">Partido 12</string>
    <string name="p13">Partido 13</string>
    <string name="p14">Partido 14</string>
    <string name="p15">Partido 15</string>
    <string name="botonAnalisisAvanzado">Analizar Quiniela</string>
    <string name="botonAnalisisSimple">Analizar Partido</string>
    <string name="botonRandom">Aleatorio</string>
    <string name="base">Simple</string>
    <string name="aleatorio">Multiple</string>
    <string name="output1">Pronóstico conservador</string>
    <string name="output2">Pronóstico libre</string>
    <string name="output3">Pronóstico matemático</string>
    <string name="empate">Probabilidad de X: </string>
    <string name="uno">Probabilidad de 1: </string>
    <string name="dos">Probabilidad de 2: </string>
    <string name="valor1">Muy Baja</string>
    <string name="valor2">Baja</string>
    <string name="valor3">Normal</string>
    <string name="valor4">Alta</string>
    <string name="valor5">Muy Alta</string>
    <string name="estadistica">Estadísticas de apoyo</string>
    <string name="volver">Volver</string>

</resources>
