<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="morrisoft.quiniela.PantallaResultadoPartido">

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView27"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/textView27"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="44dp"
        android:background="#ff006a24"
        android:text="@string/hello_world"
        android:textColor="#ffffffff"/>

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView28"
        android:layout_alignBottom="@+id/textView28"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/hello_world"
        android:textColor="#ffffffff"/>

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:text="@string/output1"
        android:layout_below="@+id/textView28"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView29"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:orientation="horizontal">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:indeterminate="false"
            android:progress="50"/>

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:progress="50"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/textView30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/output2"
        android:layout_below="@+id/layout1"
        android:layout_toLeftOf="@+id/textView27"
        android:layout_toStartOf="@+id/textView27"/>

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView30"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:orientation="horizontal">

        <ProgressBar
            android:id="@+id/progressBar3"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:indeterminate="false"
            android:progress="50"/>

        <ProgressBar
            android:id="@+id/progressBar4"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:progress="50"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/textView31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/uno"
        android:textSize="16dp"
        android:layout_below="@+id/textView46"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:id="@+id/textView32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empate"
        android:textSize="16dp"
        android:layout_below="@+id/textView31"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:id="@+id/textView33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dos"
        android:textSize="16dp"
        android:layout_below="@+id/textView32"
        android:layout_toLeftOf="@+id/textView35"
        android:layout_toStartOf="@+id/textView35"/>

    <TextView
        android:id="@+id/textView34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView32"
        android:layout_toEndOf="@+id/textView32"
        android:layout_toRightOf="@+id/textView32"
        android:text="---"
        android:textSize="16dp"/>

    <TextView
        android:id="@+id/textView35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView33"
        android:layout_toEndOf="@+id/textView31"
        android:layout_toRightOf="@+id/textView31"
        android:text="---"
        android:textSize="16dp"/>

    <TextView
        android:id="@+id/textView36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView33"
        android:layout_toEndOf="@+id/textView32"
        android:layout_toRightOf="@+id/textView32"
        android:text="---"
        android:textSize="16dp"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volver"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="1"
        android:id="@+id/textView37"
        android:layout_below="@+id/textView29"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="X"
        android:id="@+id/textView38"
        android:textSize="20dp"
        android:layout_alignTop="@+id/textView37"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="2"
        android:id="@+id/textView39"
        android:textSize="20dp"
        android:layout_alignTop="@+id/textView38"
        android:layout_alignRight="@+id/layout1"
        android:layout_alignEnd="@+id/layout1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="1"
        android:id="@+id/textView40"
        android:textSize="20dp"
        android:layout_below="@+id/textView30"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="X"
        android:id="@+id/textView41"
        android:textSize="20dp"
        android:layout_below="@+id/textView30"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="2"
        android:id="@+id/textView42"
        android:textSize="20dp"
        android:layout_below="@+id/textView30"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:id="@+id/textView44"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/output3"
        android:layout_below="@+id/layout2"
        android:layout_alignRight="@+id/textView29"
        android:layout_alignEnd="@+id/textView29"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="X:"
        android:id="@+id/textView45"
        android:textSize="20dp"
        android:layout_below="@+id/textView44"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="1:"
        android:id="@+id/textView46"
        android:textSize="20dp"
        android:layout_below="@+id/textView44"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="2:"
        android:id="@+id/textView47"
        android:textSize="20dp"
        android:layout_below="@+id/textView44"
        android:layout_alignRight="@+id/textView42"
        android:layout_alignEnd="@+id/textView42"/>


</RelativeLayout>
